--- a/marketagro/catalogo/templates/index.html
+++ b/marketagro/catalogo/templates/index.html
@@ -59,6 +59,155 @@
       </div>
     </header><!-- End Header -->
     {% block content %}{% endblock %}
+    <!-- ======= Intro Section ======= -->
+    <section id="intro">
+      <div class="intro-container">
+        <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
+
+          <ol class="carousel-indicators"></ol>
+
+          <div class="carousel-inner" role="listbox">
+
+            <div class="carousel-item active" style="background-image: url(assets/img/intro-carousel/1.jpg)">
+              <div class="carousel-container">
+                <div class="container">
+                  <h2 class="animate__animated animate__fadeInDown">We are professional</h2>
+                  <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item" style="background-image: url(assets/img/intro-carousel/2.jpg)">
+              <div class="carousel-container">
+                <div class="container">
+                  <h2 class="animate__animated animate__fadeInDown">At vero eos et accusamus</h2>
+                  <p class="animate__animated animate__fadeInUp">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+                  <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item" style="background-image: url(assets/img/intro-carousel/3.jpg)">
+              <div class="carousel-container">
+                <div class="container">
+                  <h2 class="animate__animated animate__fadeInDown">Temporibus autem quibusdam</h2>
+                  <p class="animate__animated animate__fadeInUp">Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+                  <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item" style="background-image: url(assets/img/intro-carousel/4.jpg)">
+              <div class="carousel-container">
+                <div class="container">
+                  <h2 class="animate__animated animate__fadeInDown">Nam libero tempore</h2>
+                  <p class="animate__animated animate__fadeInUp">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum.</p>
+                  <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item" style="background-image: url(assets/img/intro-carousel/5.jpg)">
+              <div class="carousel-container">
+                <div class="container">
+                  <h2 class="animate__animated animate__fadeInDown">Magnam aliquam quaerat</h2>
+                  <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+
+          <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+
+        </div>
+      </div>
+    </section><!-- End Intro Section -->
+    <section>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam non, facilis maiores sequi deserunt nihil perspiciatis eum quos modi a officia neque dolorem vero cum recusandae sit officiis illum numquam?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quasi, quas, delectus commodi maxime enim minima blanditiis dolorem consequuntur accusantium ut! Facilis in quia natus a inventore expedita deserunt hic!
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia ipsa saepe nesciunt, quaerat qui nostrum itaque quo repellat velit ut exercitationem, vitae illo eaque, ea omnis quidem reprehenderit! Voluptatibus, perspiciatis?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae magnam omnis officia, adipisci vero amet quasi eos architecto corrupti unde quas nostrum cumque voluptatum molestiae aliquid quaerat magni porro dolorem.
+    </section>
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+
+            <div class="col-lg-3 col-md-6 footer-info">
+              <h3>BizPage</h3>
+              <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-links">
+              <h4>Useful Links</h4>
+              <ul>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#">Home</a></li>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#">About us</a></li>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#">Services</a></li>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#">Terms of service</a></li>
+                <li><i class="ion-ios-arrow-right"></i> <a href="#">Privacy policy</a></li>
+              </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-contact">
+              <h4>Contact Us</h4>
+              <p>
+                A108 Adam Street <br>
+                New York, NY 535022<br>
+                United States <br>
+                <strong>Phone:</strong> +1 5589 55488 55<br>
+                <strong>Email:</strong> info@example.com<br>
+              </p>
+
+              <div class="social-links">
+                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              </div>
+
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-newsletter">
+              <h4>Our Newsletter</h4>
+              <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
+              <form action="" method="post">
+                <input type="email" name="email"><input type="submit" value="Subscribe">
+              </form>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="copyright">
+          &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          <!--
+          All the links in the footer should remain intact.
+          You can delete the links only if you purchased the pro version.
+          Licensing information: https://bootstrapmade.com/license/
+          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
+        -->
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
+      </div>
+    </footer><!-- End Footer -->
 
     {% load static %}
     <!-- Vendor JS Files -->
