--- a/marketagro/catalogo/static/css/custom.css
+++ b/marketagro/catalogo/static/css/custom.css
@@ -9,27 +9,23 @@ Paleta:
 Fuente a utilizar: Montserrat
 */
 
+.back-black{
+  background-color: rgb(0, 0, 0, 0.9);
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 350;
-  color: #333;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   color: #2B2D42;
   font-weight: 700;
   margin: 0 0 10px;
 }
 
-a {
-  color: #2B2D42;
-  font-weight: 500;
-  -webkit-transition: 0.2s color;
-  transition: 0.2s color;
-}
-
 a:hover, a:focus {
-  color: #F3753A;
+  color: #18d36e;
   text-decoration: none;
   outline: none;
 }
@@ -70,7 +66,6 @@ a:hover, a:focus {
 #encabezado-superior {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #1E1F29;
 }
 
 .header-total > div {
@@ -92,32 +87,12 @@ a:hover, a:focus {
 }
 
 .header-links li a:hover {
-  color: #F3753A;
+  color: #18d36e;
 }
 
 .header-links li i {
-  color: #F3753A;
+  color: #18d36e;
   margin-right: 5px;
-}
-
-/*Logo*/
-#header {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #15161D;
-}
-
-.header-logo {
-  float: left;
-}
-
-.header-logo .logo img {
-  display: inline-block;
-}
-
-.header-logo .logo {
-  color: white;
-  font-size: 3rem;
 }
 /*Busqueda*/
 .header-search {
@@ -141,7 +116,7 @@ a:hover, a:focus {
 .header-search form .search-btn {
   height: 40px;
   width: 100px;
-  background: #F3753A;
+  background: #18d36e;
   color: #FFF;
   font-weight: 700;
   border: none;
@@ -170,7 +145,7 @@ a:hover, a:focus {
 }
 
 .header-ctn>div>a:hover{
-  color: #F3753A;
+  color: #18d36e;
 }
 
 .header-ctn>div>a>i {
@@ -193,7 +168,7 @@ a:hover, a:focus {
   border-radius: 50%;
   font-size: 10px;
   color: #FFF;
-  background-color: #F3753A;
+  background-color: #18d36e;
 }
 
 .header-ctn .menu-toggle {
@@ -226,54 +201,6 @@ a:hover, a:focus {
 }
 
 
-
-#navigation {
-  background: #FFF;
-  border-top: 2px solid #F3753A;
-}
-
-#footer {
-  background: #15161D;
-  color: #B9BABC;
-}
-
-#bottom-footer {
-  background: #1E1F29;
-}
-
-.footer {
-  margin: 30px 0px;
-}
-
-.footer .footer-title {
-  color: #FFF;
-  text-transform: uppercase;
-  font-size: 18px;
-  margin: 0px 0px 30px;
-}
-
-.footer-links li a {
-  color: #ffff;
-}
-
-.footer-links li i {
-  margin-right: 15px;
-  color: #F3753A;
-  width: 14px;
-  text-align: center;
-}
-
-.footer-links li a:hover {
-  color: #F3753A;
-}
-
-.copyright {
-  margin-top: 30px;
-  display: block;
-  font-size: 12px;
-}
-
-
 /*PRODUCTOS*/
 .product {
   position: relative;
@@ -282,7 +209,7 @@ a:hover, a:focus {
 }
 
 .product:hover {
-  box-shadow: 0px 0px 6px 0px #F3753A;
+  box-shadow: 0px 0px 6px 0px #18d36e;
 }
 
 .product .product-img {
@@ -685,7 +612,6 @@ a:hover, a:focus {
     position: fixed;
     left: 0;
     top: 0;
-    background: #15161D;
     height: 100vh;
     max-width: 250px;
     width: 0%;
