Se añaden categorías en región y comuna

--- a/marketagro/catalogo/templates/index.html
+++ b/marketagro/catalogo/templates/index.html
@@ -46,7 +46,7 @@
                 </li>
                 -->
                 <li><a href="#">Contáctanos</a></li>
-                <li><a href="{% url 'ingresar' %}">Ingresar</a></li>
+                <li><a href="{% url 'login' %}">Ingresar</a></li>
               </ul>
             </nav><!-- .nav-menu -->
           </div>
