--- a/marketagro/catalogo/templates/index.html
+++ b/marketagro/catalogo/templates/index.html
@@ -18,6 +18,7 @@
     <link href="{% static 'vendor/venobox/venobox.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/owl.carousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/aos/aos.css' %}" rel="stylesheet">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
 
     <!-- Template Main CSS File -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -113,6 +114,7 @@
     <script src="{% static 'vendor/venobox/venobox.min.js' %}"></script>
     <script src="{% static 'vendor/owl.carousel/owl.carousel.min.js' %}"></script>
     <script src="{% static 'vendor/aos/aos.js' %}"></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
 
     <!-- Template Main JS File -->
     <script src="{% static 'js/main.js' %}"></script>
