--- a/marketagro/catalogo/templates/catalogo.html
+++ b/marketagro/catalogo/templates/catalogo.html
@@ -18,7 +18,8 @@
         <div class="back-black">
             <div class="container">
                 <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 clearfix">
+							
                         </div>
                         <!-- BARRA DE BÚSQUEDA -->
 						<div class="col-md-6">
@@ -37,8 +38,10 @@
 						<!-- /BARRA DE BÚSQUEDA -->
 
 						<!-- USUARIO -->
+						{% load static %}
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
+
 								<!-- Deseos -->
 								<div>
 									<a href="listadeseos.html">
@@ -57,8 +60,18 @@
 								</div>
 								<!-- /Carrito -->
 							</div>
+							<!--/Agregar producto-->
+							<div class="col-md-3 clearfix">
+								<div class="header-ctn">
+									<div>
+										<a href="{% url 'form_cr_prod' %}">
+											<i class="fa fa-plus-circle" aria-hidden="true"></i>
+											<span>Agregar producto</span>
+										</a>
+									</div>
+								</div>
+							</div>
 						</div>
-						<!-- /USUARIO-->
                 </div>
             </div>
         </div>
