Se agrega validacion para el form de producto

--- a/marketagro/catalogo/templates/index.html
+++ b/marketagro/catalogo/templates/index.html
@@ -31,6 +31,7 @@
     <script src="{% static 'vendor/aos/aos.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/prod.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
 
     <!-- Template Main CSS File -->
     {% load static %}
@@ -73,7 +74,7 @@
     <footer id="footer">
       <div class="footer-top">
         <div class="container">
-          <div class="row">
+          <div class="row ">
 
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Secciones</h4>
