Form agrega los productos a la bdd

--- a/marketagro/catalogo/templates/productos/producto-form.html
+++ b/marketagro/catalogo/templates/productos/producto-form.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="form-group" >
                     <label for="imagen">Precio del producto:</label>
-                        <input type="file" class="form-control" name="imagen" id="imagen" maxlength="8" placeholder="Imagen">
+                        <input type="file" class="form-control" name="imagen" id="imagen" placeholder="Imagen">
                 </div>
                 <br>
                 <div class="text-center">
