--- a/marketagro/catalogo/templates/index.html
+++ b/marketagro/catalogo/templates/index.html
@@ -63,6 +63,8 @@
                 -->
                 <li><a href="#">Contáctanos</a></li>
                 <li><a href="{% url 'login' %}">Ingresar</a></li>
+                <li><a href="{% url 'registro' %}">Registrarse</a></li>
+                
               </ul>
             </nav><!-- .nav-menu -->
           </div>
