Arreglos en form usuario, cambios en form producto, cambios en tabla usuario

--- a/marketagro/catalogo/templates/productos/producto-form.html
+++ b/marketagro/catalogo/templates/productos/producto-form.html
@@ -36,21 +36,11 @@
                 </div>
                 <div class="form-group" >
                     <label for="categoria_id_cate">Categoría del producto:</label>
-                        <select class="form-control" id="categoria_id_cate" name="categoria_id_cate">
-                            <option value="1">Alimenticio</option>
-                            <option value="2">Industrial</option>
-                        </select>
+                        {{form.categoria_id_cate}}
                 </div>
                 <div class="form-group" >
                     <label for="tipo_producto_id_tipo">Tipo de producto:</label>
-                        <select class="form-control" id="tipo_producto_id_tipo" name="tipo_producto_id_tipo">
-                            <option value="1">Fruta</option>
-                            <option value="2">Verdura</option>
-                            <option value="3">Legumbre</option>
-                            <option value="4">Textil</option>
-                            <option value="5">Cereal</option>
-                            <option value="6">Planta</option>
-                        </select>
+                        {{form.tipo_producto_id_tipo}}
                 </div>
                 <div class="form-group" >
                     <label for="proveedor_rut">Proveedor del producto:</label>
