--- a/marketagro/catalogo/templates/usuario/usuario-form.html
+++ b/marketagro/catalogo/templates/usuario/usuario-form.html
@@ -48,13 +48,9 @@
                     
                 </div>
                 <div class="form-group" >
-                    <label for="tipo_producto_id_tipo">Comuna:</label>
+                    <label for="comuna_id_comu">Comuna:</label>
                         {{form.comuna_id_comu}}
                         
-                </div>
-                <div class="form-group" >
-                    <label for="proveedor_rut">Proveedor del producto:</label>
-                        {{form.proveedor_rut}}
                 </div>
                 <div class="form-group" >
                     <label for="username">Username:</label>
